# minimal-st-app-docker

./: .gitignore  .pdm.toml  Dockerfile  README.md  TODO.md  justfile  pyproject.toml  requirements-deploy.in  requirements-deploy.txt  requirements-dev.in  requirements-dev.txt  requirements.txt  settings.toml
.streamlit/: config.toml
app/: Main.py
app/pages/: 2_Data.py  3_Modelling.py  4_Blog.py
app/src/: datasource.py  helper.py  modelling_logistic_simple.py  sidebar.py
app/src/openerror/: ImputeByGroup.py  PandasColumnTransformer.py
data/: titanica new detail.xlsx
docs/: about.md  data_expectations.md  data_governance.md  eda_titanic_background.md  meta_data.md  modelling.md  titanic_blog.md
docs/nbconvert/: eda_titanic_data.md
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: getting_started_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id
great_expectations/expectations/test/csv/: warning.json
great_expectations/expectations/train/csv/: warning.json
notebooks/: age_reconciliation.ipynb  eda_titanic_data.ipynb  experiment_sklearn.ipynb  misc_testing.ipynb  modelling-logistic-simple.ipynb  modelling-pipeline.ipynb  neuraxle-testing1.ipynb  neuraxle-testing2.ipynb  neuraxle-testing3.ipynb  pandas-in-sklearn-openerror-demo.ipynb  parent_in_path.py  sklearn-pandas-testing.ipynb  sklearn-pipeline.ipynb  sklearn-testing1.ipynb  titanic-data-ge.ipynb  titanic_sklearn.ipynb
src/: Main.py  helper.py
src/pages/: 1_Utilities.py
utils/: create_dockerfile.py  get_package_ratings.py
